--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
-fastapi
-python-dotenv
-redis
-twilio
-groq
-supabase
-uvicorn
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
+fastapi==0.115.6
+groq==0.15.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.29
+langchain-groq==0.2.3
+langgraph==0.2.62
+langgraph-checkpoint==2.0.9
+langgraph-sdk==0.1.51
+langsmith==0.2.10
+msgpack==1.1.0
+numexpr==2.10.2
+numpy==2.2.1
+orjson==3.10.14
+packaging==24.2
+pydantic==2.10.5
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+setuptools==69.5.1
+sniffio==1.3.1
+starlette==0.41.3
+tenacity==9.0.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+wheel==0.43.0
