streamlit app configured

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -4,8 +4,8 @@ FROM python:3.12.3-slim
 ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements_server.txt ./
+RUN pip install --no-cache-dir -r requirements_server.txt
 
 # Copy the application code
 COPY . .
