--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 MODE=dev
 
 GROQ_API_KEY=
-GROQ_MODEL=llama3-8b-8192
+GROQ_MODEL=llama-3.3-70b-versatile
 
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_API_KEY=
