--- a/example.env
+++ b/example.env
@@ -5,3 +5,9 @@ GROQ_MODEL=llama-3.3-70b-versatile
 
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_API_KEY=
+
+# POSTGRES_DB
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
+POSTGRES_DB=pgdb_name
+POSTGRES_PORT=5432
