--- a/requirements_server.txt
+++ b/requirements_server.txt
@@ -1,10 +1,12 @@
 annotated-types==0.7.0
 anyio==4.8.0
+asyncpg==0.30.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
 fastapi==0.115.6
+greenlet==3.1.1
 groq==0.15.0
 h11==0.14.0
 httpcore==1.0.7
@@ -23,6 +25,7 @@ numexpr==2.10.2
 numpy==2.2.1
 orjson==3.10.14
 packaging==24.2
+psycopg2-binary==2.9.10
 pydantic==2.10.5
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
@@ -32,6 +35,8 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 setuptools==69.5.1
 sniffio==1.3.1
+SQLAlchemy==2.0.37
+sqlmodel==0.0.22
 starlette==0.41.3
 tenacity==9.0.0
 typing_extensions==4.12.2
