--- a/example.env
+++ b/example.env
@@ -11,3 +11,8 @@ POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_DB=pgdb_name
 POSTGRES_PORT=5432
+
+# Google Auth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:8088
