--- a/example.env
+++ b/example.env
@@ -13,6 +13,6 @@ POSTGRES_DB=pgdb_name
 POSTGRES_PORT=5432
 
 # Google Auth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_SECRET_JSON_PATH=client_secret.json
 GOOGLE_REDIRECT_URI=http://localhost:8088
+GOOGLE_AUTH_COOKIE_KEY=google_auth_cookie
