--- a/requirements_client.txt
+++ b/requirements_client.txt
@@ -1,4 +1,67 @@
-httpx
-python-dotenv
-streamlit
-streamlit-google-auth
+altair==5.5.0
+anyio==4.8.0
+attrs==25.1.0
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+extra-streamlit-components==0.1.71
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.24.0
+numpy==2.2.2
+oauthlib==3.2.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyarrow==19.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydeck==0.9.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+referencing==0.36.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+setuptools==69.5.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.41.1
+streamlit-google-auth==1.1.8
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.2
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+watchdog==6.0.0
+wheel==0.43.0
