--- a/requirements_client.txt
+++ b/requirements_client.txt
@@ -1,11 +1,13 @@
 altair==5.5.0
 anyio==4.8.0
+astroid==3.3.8
 attrs==25.1.0
 blinker==1.9.0
 cachetools==5.5.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+dill==0.3.9
 extra-streamlit-components==0.1.71
 gitdb==4.0.12
 GitPython==3.1.44
@@ -20,11 +22,13 @@ httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
+isort==6.0.0
 Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 narwhals==1.24.0
 numpy==2.2.2
@@ -32,6 +36,7 @@ oauthlib==3.2.2
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+platformdirs==4.3.6
 proto-plus==1.26.0
 protobuf==5.29.3
 pyarrow==19.0.0
@@ -40,6 +45,7 @@ pyasn1_modules==0.4.1
 pydeck==0.9.1
 Pygments==2.19.1
 PyJWT==2.10.1
+pylint==3.3.4
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -58,6 +64,7 @@ streamlit==1.41.1
 streamlit-google-auth==1.1.8
 tenacity==9.0.0
 toml==0.10.2
+tomlkit==0.13.2
 tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2025.1
