--- a/requirements_server.txt
+++ b/requirements_server.txt
@@ -1,9 +1,11 @@
 annotated-types==0.7.0
 anyio==4.8.0
+astroid==3.3.8
 asyncpg==0.30.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+dill==0.3.9
 distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
@@ -14,6 +16,7 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+isort==6.0.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain-core==0.3.29
@@ -22,15 +25,18 @@ langgraph==0.2.62
 langgraph-checkpoint==2.0.9
 langgraph-sdk==0.1.51
 langsmith==0.2.10
+mccabe==0.7.0
 msgpack==1.1.0
 numexpr==2.10.2
 numpy==2.2.1
 orjson==3.10.14
 packaging==24.2
+platformdirs==4.3.6
 psycopg2-binary==2.9.10
 pydantic==2.10.5
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+pylint==3.3.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
 redis==5.2.1
@@ -42,6 +48,7 @@ SQLAlchemy==2.0.37
 sqlmodel==0.0.22
 starlette==0.41.3
 tenacity==9.0.0
+tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
