log added witth cors

--- a/example.env
+++ b/example.env
@@ -16,3 +16,6 @@ POSTGRES_PORT=5432
 GOOGLE_SECRET_JSON_PATH=client_secret.json
 GOOGLE_REDIRECT_URI=http://localhost:8088
 GOOGLE_AUTH_COOKIE_KEY=google_auth_cookie
+
+# Security
+ALLOWED_HOSTS=http://localhost:8088
