--- a/requirements_server.txt
+++ b/requirements_server.txt
@@ -25,6 +25,7 @@ langgraph==0.2.62
 langgraph-checkpoint==2.0.9
 langgraph-sdk==0.1.51
 langsmith==0.2.10
+loguru==0.7.3
 mccabe==0.7.0
 msgpack==1.1.0
 numexpr==2.10.2
@@ -53,4 +54,3 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
 wheel==0.43.0
-loguru
