--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
         pip install -r requirements_server.txt
     - name: Analysing the code with pylint
       run: |
-        pylint --disable=W0718,C0301 src/
+        pylint --disable=W0718,C0301,R0903 src/
