--- a/example.env
+++ b/example.env
@@ -14,8 +14,12 @@ POSTGRES_PORT=5432
 
 # Google Auth
 GOOGLE_SECRET_JSON_PATH=client_secret.json
-GOOGLE_REDIRECT_URI=http://localhost:8088
+GOOGLE_REDIRECT_URI=http://localhost:8080
 GOOGLE_AUTH_COOKIE_KEY=google_auth_cookie
 
 # Security
-ALLOWED_HOSTS=http://localhost:8088
+ALLOWED_HOSTS=http://localhost:8080
+
+# Ports
+SERVER_PORT=8088
+CLIENT_PORT=8080
